fix: clean up style.css by removing unnecessary whitespace and updating date color

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ html {
   scroll-behavior: smooth;
 }
 
+
 body {
   background-color: var(--bg-color);
   color: var(--text-color);
@@ -56,7 +57,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 /* .title {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 } */
@@ -69,8 +69,7 @@ body {
 
 .date {
   font-weight: 900;
-  color: var(--muted-color);
-  opacity: 0.5;
+  color: oklab(from var(--muted-color) 0.8 a b)
 }
 
 .project {
